# LLMRAG

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
configs/: pipeline_config.yaml
docs/: LLLMRAG-Interactive-Pipeline.html  lllmrag-pipeline-animation.html  llmrag-pipeline-animation.html  llmrag-v3-pipeline-animation.html
scripts/: setup.sh
src/: __init__.py
src/agentic/: agents.py
src/agi/: framework.py
src/cloud/: providers.py
src/embedding/: engine.py
src/generation/: engine.py
src/ingestion/: engine.py
src/multimodal/: engine.py
src/pipeline/: api_server.py  orchestrator.py
src/retrieval/: engine.py
src/security/: engine.py
src/streaming/: engine.py
src/tools/: cli.py  evaluator.py  web_crawler.py
src/utils/: config.py  logger.py
tests/: test_pipeline.py
