[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmrag-v3"
version = "3.0.0"
description = "Automated LLM & RAG Deployment for AI/AGI/GI Genetic Frameworks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ken Barnes", email = "ken@ucssolutions.com"},
]
keywords = ["llm", "rag", "ai", "agi", "pipeline", "automation", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=2.0.0",
    "chromadb>=0.4.0",
    "openai>=2.0.0",
    "fastapi[standard]>=0.2.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
all = [
    "anthropic>=0.25.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.23.0",
    "python-docx>=0.8.11",
    "boto3>=1.34.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "flake8>=7.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
]

[project.scripts]
llmrag = "src.tools.cli:main"

[project.urls]
Repository = "https://github.com/kennyb7322/LLMRAG-V3"
